--- a/stylesheets/scss/_menus.scss
+++ b/stylesheets/scss/_menus.scss
@@ -118,6 +118,7 @@
   }
 
   .front-page & {
+    position: relative;
     text-align: center;
   }
 
